--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,6 @@ jobs:
         
       - name: Build Next.js
         run: npm run build
-        
       - name: Deploy to sph-ris-deploy
         run: |
           cd out
@@ -31,4 +30,5 @@ jobs:
           git config user.email "actions@github.com"
           git add .
           git commit -m "Auto deploy from main repo"
+          git branch -M main
           git push -f https://${{ secrets.DEPLOY_TOKEN }}@github.com/hypnorel/sph-ris-deploy.git main
